--- a/app/src/main/res/layout/activity_calender_test.xml
+++ b/app/src/main/res/layout/activity_calender_test.xml
@@ -9,17 +9,15 @@
 
     <TimePicker
         android:id="@+id/timePicker"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_width="349dp"
+        android:layout_height="332dp"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="0dp" />
 
     <DatePicker
         android:id="@+id/datePicker"
-        android:layout_width="match_parent"
+        android:layout_width="313dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         tools:layout_editor_absoluteX="18dp"
         tools:layout_editor_absoluteY="178dp" />
 </LinearLayout>
