--- a/app/src/main/res/layout/activity_grid_view_test.xml
+++ b/app/src/main/res/layout/activity_grid_view_test.xml
@@ -1,9 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.mila.adaptertest.GridViewTest">
-
-</android.support.constraint.ConstraintLayout>
+    /*
+        android:numColumns="auto_fit"  //每一行的列数，auto-fit为自动分配
+        android:horizontalSpacing=""   //每一排的间距
+        android:verticalSpacing=""     //每一行的间距
+    */
+    <TextView
+        android:id="@+id/tv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="25sp"
+        android:textColor="@color/colorAccent"
+        />
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </Spinner>
+    <GridView
+        android:id="@+id/girdView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:horizontalSpacing="16dp"
+        android:numColumns="3"
+        android:verticalSpacing="16dp" />
+</LinearLayout>
